experimental/internal/lexer/testdata/braces/unclosed.proto.stderr.txt
error: encountered unmatched `(` delimiter
  --> testdata/braces/unclosed.proto:5:1
   |
 5 | (
   | ^ expected a closing `)`

encountered 1 error
